--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -8,4 +8,13 @@
     {% csrf_token %}
     <p><input type="submit" value="Log in"></p>
   </form>
+  <div class="social">
+    <ul>
+      <li class="google">
+        <a href="{% url "social:begin" "google-oauth2" %}">
+          Sign in with Google
+        </a>
+      </li>
+    </ul>
+  </div>
 {% endblock %}
